--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <img src="">F
       </li>
       <li class="li-footer">
-        <img src="">W
+        <img src="">
       </li>
     </ul>
   </div>
